@@ -6,4 +6,4 @@ Lock=asim-platforms
 Description=Description of platforms
 Name=platforms
 Tag=HEAD
-CSN=CSN-platforms-66
+CSN=CSN-platforms-67
