@@ -14,27 +14,18 @@
  **/
 int pchnl_open_channel(struct hw_channel *pchnl)
 {
-     int ret = 0;
-
      if (pchnl == NULL){
           LIB_PCHNL_ALERT("invalid channel parameter\n");
-          ret = -ECHANNEL;
-          goto err;
+          return -ECHANNEL;
      }
 
      pchnl->fd = open("/dev/pchnl", O_RDWR);
      if (pchnl->fd < 0){
           LIB_PCHNL_ALERT("error opening device\n");
-          ret = -ENODEVICE;
-          goto no_device;
+          return -ENODEVICE;
      }
 
-     return ret;
-no_device:
-     free(pchnl);
-no_mem:
-err:
-     return ret;
+     return 0;
 }
 
 /**
